--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <input type="text" id="search">
       <input type="submit" value="Search Giphy!" class="btn btn-secondary">
     </form>
+    <div class="gifsGoHere">
+      
+    </div>
   </div>
 
   
