--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
   <div class="container">
     <h1 class="text-center text-light mt-3">Giphy Party!</h1>
-    <form action="" id="searchForm" class="form-inline justify-content-center d-flex mt-4">
-      <input type="text" id="search">
-      <input type="submit" value="Search Giphy!" class="btn btn-secondary">
+    <form action="" id="searchForm" class="form-inline justify-content-center d-flex my-4">
+      <input type="text" id="search" size="30">
+      <input type="submit" value="Search Giphy!" class="btn btn-secondary mx-2" id="submit-btn">
+      <button id="remove" class="btn btn-danger">Remove Images</button>
     </form>
-    <div class="gifsGoHere">
-      
+    <div id="gifsGoHere" class="row">
+
     </div>
   </div>
 
